objects/Internal_Commission_Reporting_Hierarchy__c.object
<CustomObject>
    <description>US29193</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internal Commission Reporting Hierarchy</relationshipLabel>
        <relationshipName>Internal_Commission_Reporting_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Relationship_Type__c</fullName>
        <label>Account Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US29193</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoginUser__c</fullName>
        <formula>IF(Reports_To__c== $User.Id,&quot;Y&quot;,&quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoginUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_End_Date__c</fullName>
        <description>Related to US 21913</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_Start_Date__c</fullName>
        <description>Related to US 21913</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US29193</description>
        <label>Reports To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Commission_Reporting_Hierarchy1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>US29193</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>29193</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Commission_Reporting_Hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Internal Commission Reporting Hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COMREP-{000000}</displayFormat>
        <label>Internal Commission Reporting Hierarchy</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Commission Reporting Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>